--- a/hajpa/src/components/Table/Table.css
+++ b/hajpa/src/components/Table/Table.css
@@ -1,30 +1,33 @@
-.storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
-  display: inline-block;
-  line-height: 1;
+.table th {
+  position: relative;
 }
-.storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
+.table {
+  border-collapse: collapse;
+  margin: 1rem;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  max-width: 100%;
+  overflow-x: scroll;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+
+.table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: left;
 }
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
+.table th,
+.table td {
+  padding: 12px 15px;
 }
-.storybook-button--medium {
-  font-size: 14px;
-  padding: 11px 20px;
+.table tbody tr {
+  border-bottom: 1px solid #dddddd;
 }
-.storybook-button--large {
-  font-size: 16px;
-  padding: 12px 24px;
+
+.table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
 }
