added pagination , more styles

--- a/hajpa/src/components/TableFilter/TableFilter.css
+++ b/hajpa/src/components/TableFilter/TableFilter.css
@@ -1,6 +1,18 @@
-.table-search {
-  position: absolute;
+.table-filter {
+  margin: 1rem;
+  border: 1px solid;
+  border-radius: 0.5rem;
+  border-color: #eee;
+  padding: 0.5rem;
   width: 100%;
-  top: 3rem;
-  left: 0;
+}
+.table-filter input {
+  cursor: pointer;
+}
+.table-filter label {
+  margin: 1rem 1.5rem 1rem 0.3rem;
+}
+.table-filter h5 {
+  margin-bottom: 0.5rem;
+  margin-top: 0;
 }
