--- a/hajpa/src/components/Table/Table.css
+++ b/hajpa/src/components/Table/Table.css
@@ -1,33 +1,125 @@
 .table th {
   position: relative;
 }
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  z-index: 0;
+}
+.table th {
+  /* Creating problems w search box*/
+  /* overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; */
+}
+.table td,
+.table th {
+  white-space: nowrap;
+}
+.table-header-icon {
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  color: white;
+}
+table .actions {
+  position: sticky;
+  right: 0;
+}
+table th.actions {
+  color: #333333;
+  background: #f3f3f3;
+}
+table td.actions {
+  background: #f3f3f3;
+}
 .table {
+  border-radius: 0.5rem;
+  display: inline-block;
   border-collapse: collapse;
   margin: 1rem;
   font-size: 0.9em;
   font-family: sans-serif;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: scroll;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  overflow-y: hidden;
 }
-
+tfoot td {
+  text-align: center;
+}
 .table thead tr {
-  background-color: #009879;
+  background: linear-gradient(270deg, #1169ff, #7925ca);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 0s ease infinite;
+  -moz-animation: AnimationName 0s ease infinite;
+  animation: AnimationName 0s ease infinite;
   color: #ffffff;
   text-align: left;
 }
 .table th,
 .table td {
-  padding: 12px 15px;
+  padding: 1rem;
 }
 .table tbody tr {
-  border-bottom: 1px solid #dddddd;
+  /* border-bottom: 1px solid #dddddd; */
 }
 
 .table tbody tr:nth-of-type(even) {
   background-color: #f3f3f3;
 }
 
-.table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.table::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(238, 238, 238, 0.3);
+  border-radius: 20px;
+  background-color: #f5f5f5;
+}
+
+.table::-webkit-scrollbar {
+  height: 8px;
+  width: 24px;
+  background-color: #f5f5f5;
+}
+
+.table::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  -webkit-box-shadow: inset 0 0 4px rgba(238, 238, 238, 0.3);
+  background-color: #555;
 }
