--- a/hajpa/src/components/TableSearch/TableSearch.css
+++ b/hajpa/src/components/TableSearch/TableSearch.css
@@ -3,4 +3,15 @@
   width: 100%;
   top: 3rem;
   left: 0;
+  z-index: 1;
+  padding: 0.3rem;
+  border-radius: 0.3rem;
+  border: 1px solid #eee;
+  box-shadow: 0px 0px 4px rgb(0 0 0 / 10%);
+}
+.table-search:focus,
+.table-search:focus-visible {
+  border: 2px solid rgb(0, 0, 0);
+  outline: 0;
+  transition: all ease 0.2s;
 }
