--- a/hajpa/src/App.css
+++ b/hajpa/src/App.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+html {
+  font-family: "Roboto", sans-serif;
+}
 .App {
   max-width: 100%;
   overflow: hidden;
