--- a/hajpa/src/components/Table/Table.css
+++ b/hajpa/src/components/Table/Table.css
@@ -17,6 +17,16 @@
 .table td,
 .table th {
   white-space: nowrap;
+  border-left: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.actions button {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  margin: 0.5rem;
+  font-weight: bold;
+  color: #0683f9;
 }
 .table-header-icon {
   cursor: pointer;
@@ -30,34 +40,38 @@ table .actions {
 }
 table th.actions {
   color: #333333;
-  background: #f3f3f3;
+  background: #ffffff;
 }
 table td.actions {
-  background: #f3f3f3;
+  background: #ffffff;
+  border-bottom: 1px solid #eee;
 }
+
 .table {
   border-radius: 0.5rem;
   display: inline-block;
-  border-collapse: collapse;
+  border-collapse: separate;
   margin: 1rem;
-  font-size: 0.9em;
-  font-family: sans-serif;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 860px;
   overflow-x: scroll;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border: 1px solid #eee;
+  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
   overflow-y: hidden;
 }
 tfoot td {
   text-align: center;
 }
 .table thead tr {
-  background: linear-gradient(270deg, #1169ff, #7925ca);
+  /* background: linear-gradient(270deg, #1169ff, #7925ca);
   background-size: 400% 400%;
 
   -webkit-animation: AnimationName 0s ease infinite;
   -moz-animation: AnimationName 0s ease infinite;
-  animation: AnimationName 0s ease infinite;
-  color: #ffffff;
+  animation: AnimationName 0s ease infinite; */
+  /* color: #ffffff; */
+  background-color: #ffffff;
+  color: #333333;
   text-align: left;
 }
 .table th,
@@ -69,7 +83,7 @@ tfoot td {
 }
 
 .table tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
+  background-color: #f7f7f7;
 }
 
 @-webkit-keyframes AnimationName {
@@ -122,4 +136,10 @@ tfoot td {
   border-radius: 1rem;
   -webkit-box-shadow: inset 0 0 4px rgba(238, 238, 238, 0.3);
   background-color: #555;
+}
+.total-results {
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  font-style: italic;
+  color: #8c8c8c;
 }
