--- a/hajpa/src/components/TablePagination/TablePagination.css
+++ b/hajpa/src/components/TablePagination/TablePagination.css
@@ -1,13 +1,14 @@
 .pagination button {
   background: transparent;
-  border: 1px solid;
-  border-radius: 0.3rem;
+  border: 1px solid #0683f9;
+  border-radius: 0.2rem;
   margin: 0 0.4rem;
-  padding: 0.3rem 0.5rem;
+  padding: 0.3rem 0.8rem;
   cursor: pointer;
+  color: #0683f9;
 }
 .pagination button:hover {
-  background: black;
+  background: #0683f9;
   color: white;
   transition: all ease 0.2s;
 }
@@ -17,5 +18,6 @@
   justify-content: center;
 }
 .pagination button.active {
-  border-color: aqua;
+  background: #0683f9;
+  color: white;
 }
