--- a/hajpa/src/components/Table/Table.css
+++ b/hajpa/src/components/Table/Table.css
@@ -14,11 +14,20 @@
   text-overflow: ellipsis;
   white-space: nowrap; */
 }
-.table td,
-.table th {
+.table.light td,
+.table.light th {
   white-space: nowrap;
   border-left: 1px solid #eee;
   border-bottom: 1px solid #eee;
+}
+.table.dark {
+  border-collapse: collapse;
+}
+.table.dark td,
+.table.dark th {
+  white-space: nowrap;
+  border-left: 1px solid #292929;
+  border-bottom: 1px solid #292929;
 }
 .actions button {
   background: transparent;
@@ -38,31 +47,44 @@ table .actions {
   position: sticky;
   right: 0;
 }
-table th.actions {
+table.dark th.actions {
+  color: #ffffff;
+  background: #202020;
+}
+table.dark td.actions {
+  background: #202020;
+}
+table.light th.actions {
   color: #333333;
   background: #ffffff;
 }
-table td.actions {
+table.light td.actions {
   background: #ffffff;
   border-bottom: 1px solid #eee;
 }
-
 .table {
   border-radius: 0.5rem;
-  display: inline-block;
+  /* display: inline-block; */
   border-collapse: separate;
   margin: 1rem;
   width: 100%;
-  max-width: 860px;
-  overflow-x: scroll;
+  /* max-width: 1080px; */
+  overflow-x: auto;
   border: 1px solid #eee;
+  max-height: 80vh;
   /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 tfoot td {
   text-align: center;
 }
-.table thead tr {
+.table.dark thead tr,
+.table.dark tbody tr {
+  background-color: #202020;
+  color: #ffffff;
+  text-align: left;
+}
+.table.light thead tr {
   /* background: linear-gradient(270deg, #1169ff, #7925ca);
   background-size: 400% 400%;
 
@@ -82,10 +104,12 @@ tfoot td {
   /* border-bottom: 1px solid #dddddd; */
 }
 
-.table tbody tr:nth-of-type(even) {
+.table.light tbody tr:nth-of-type(even) {
   background-color: #f7f7f7;
 }
-
+.table.dark tbody tr:nth-of-type(even) {
+  background-color: #333333;
+}
 @-webkit-keyframes AnimationName {
   0% {
     background-position: 0% 50%;
@@ -128,7 +152,7 @@ tfoot td {
 
 .table::-webkit-scrollbar {
   height: 8px;
-  width: 24px;
+  width: 8px;
   background-color: #f5f5f5;
 }
 
@@ -138,8 +162,13 @@ tfoot td {
   background-color: #555;
 }
 .total-results {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   font-size: 0.8rem;
   font-style: italic;
   color: #8c8c8c;
+  margin-bottom: 1rem;
+}
+.clear-filters {
+  color: #0683f9;
+  cursor: pointer;
 }
