--- a/hajpa/src/components/TableFilter/TableFilter.css
+++ b/hajpa/src/components/TableFilter/TableFilter.css
@@ -1,6 +1,6 @@
 .table-filter {
   /* margin: 1rem; */
-  border: 1px solid;
+  /* border: 1px solid; */
   border-radius: 0.5rem;
   border-color: #eee;
   padding: 0.5rem;
