--- a/hajpa/src/components/TableDropdownList/TableDropdownList.css
+++ b/hajpa/src/components/TableDropdownList/TableDropdownList.css
@@ -1,17 +1,22 @@
-.table-search {
-  position: absolute;
+.table-search-dropdown {
   width: 100%;
-  top: 3rem;
-  left: 0;
   z-index: 1;
   padding: 0.3rem;
   border-radius: 0.3rem;
   border: 1px solid #eee;
-  box-shadow: 0px 0px 4px rgb(0 0 0 / 10%);
+  /* box-shadow: 0px 0px 4px rgb(0 0 0 / 10%); */
 }
-.table-search:focus,
-.table-search:focus-visible {
+.table-search-dropdown:focus,
+.table-search-dropdown:focus-visible {
   border: 2px solid rgb(0, 0, 0);
   outline: 0;
   transition: all ease 0.2s;
+}
+select#selectDropdown {
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: inline-block;
 }
