--- a/hajpa/src/features/DummyFeature.css
+++ b/hajpa/src/features/DummyFeature.css
@@ -1,4 +1,4 @@
-.main-container {
+/* .main-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -6,4 +6,7 @@
 .main-container div {
   margin: auto;
   max-width: 1080px;
+} */
+.main-container {
+  padding: 2rem;
 }
